[gd_scene load_steps=7 format=3 uid="uid://dtytvxd6ovx"]

[ext_resource type="Script" path="res://skills/bullet_base.gd" id="1_1m7nd"]
[ext_resource type="Texture2D" uid="uid://b6h01t6t1vu5d" path="res://sprites/bullet.png" id="2_sp3d5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o1i3j"]
radius = 3.0

[sub_resource type="Animation" id="Animation_gfxw6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nxgvd"]
resource_name = "magic_blal"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_85wjk"]
_data = {
"RESET": SubResource("Animation_gfxw6"),
"magic_blal": SubResource("Animation_nxgvd")
}

[node name="BulletBase" type="Node2D"]
z_index = 6
script = ExtResource("1_1m7nd")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_sp3d5")
hframes = 2

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_o1i3j")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_85wjk")
}
autoplay = "magic_blal"

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
